MOD: 카테링크수정

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -30,6 +30,11 @@
                 padding-left: 34px;
                 padding-right: 34px;
               }
+              .mouseoverTab {
+                position: absolute;
+                top: 0;
+                left: 0;
+              }
             }
           }
         }
