--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -54,6 +54,7 @@
           li {
             padding-right: 20px;
             font-size: 14px;
+            color: #222;
           }
         }
         .rightBottom {
@@ -101,11 +102,19 @@
     top: 130px;
     left: 0;
   }
+  .openModal {
+    width: 100%;
+    height: 100%;
+    background-color: rgba($color: #000000, $alpha: 0.2);
+    position: fixed;
+    top: 0;
+    left: 0;
+  }
 }
 .mainHeaderContainer {
   position: relative;
   width: 100%;
-  background-color: #000;
+  background-color: #000000;
   color: #fff;
   .navContainer {
     width: 1100px;
@@ -136,6 +145,11 @@
                 padding-left: 34px;
                 padding-right: 34px;
               }
+              .mouseoverTab {
+                position: absolute;
+                top: 0;
+                left: 0;
+              }
             }
           }
         }
@@ -155,6 +169,7 @@
           li {
             padding-right: 20px;
             font-size: 14px;
+            color: #fff;
           }
         }
         .rightBottom {
@@ -200,6 +215,14 @@
     background-color: #333;
     position: absolute;
     top: 130px;
+    left: 0;
+  }
+  .openModal {
+    width: 100%;
+    height: 100%;
+    background-color: rgba($color: #000000, $alpha: 0.4);
+    position: fixed;
+    top: 0;
     left: 0;
   }
 }
