--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -57,6 +57,14 @@
           font-size: 1em;
           color: #777;
         }
+        .success {
+          width: 100%;
+          line-height: 46px;
+          border: none;
+          font-size: 1em;
+          color: #fff;
+          background-color: #036635;
+        }
         .link > li:nth-child(1) {
           padding: 20px 0 30px 0;
           text-align: center;
