--- a/src/pages/SignUp/Info.module.scss
+++ b/src/pages/SignUp/Info.module.scss
@@ -1,59 +1,11 @@
-.kioskTrue {
-  display: inline-block;
-  margin-right: 20px;
-  input[type='checkbox'] {
-    display: none;
-  }
-  input[type='checkbox'] + label {
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    border: 1px solid #2c7aff;
-    border-radius: 50%;
-    position: relative;
-    top: 4px;
-    left: 2px;
-  }
-  input[id='kiosk1']:checked + label::after {
-    content: '';
-    font-size: 25px;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background-color: #2c7aff;
-    text-align: center;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    top: 50%;
-  }
-}
-.kioskFalse {
-  display: inline-block;
-  input[type='checkbox'] {
-    display: none;
-  }
-  input[type='checkbox'] + label {
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    border: 1px solid #2c7aff;
-    border-radius: 50%;
-    position: relative;
-    top: 4px;
-    left: 2px;
-  }
-  input[id='kiosk2']:checked + label::after {
-    content: '';
-    font-size: 25px;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background-color: #2c7aff;
-    text-align: center;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    top: 50%;
+.boxContent {
+  text-align: center;
+  .inputKiosk {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    span {
+      display: block;
+    }
   }
 }
