--- a/src/pages/SignUp/Auth.module.scss
+++ b/src/pages/SignUp/Auth.module.scss
@@ -1,5 +1,6 @@
 .authContainer {
   width: 100%;
+  position: relative;
   .content {
     padding-top: 40px;
     .title {
@@ -26,5 +27,11 @@
         padding-top: 16px;
       }
     }
+  }
+  .authModal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
