--- a/src/pages/SignUp/SignUp.module.scss
+++ b/src/pages/SignUp/SignUp.module.scss
@@ -27,6 +27,14 @@
           &:nth-child(4) {
             padding-right: 0px;
           }
+          .noneStyle {
+            color: #444;
+            text-decoration: none;
+          }
+          .titleStyle {
+            color: #036635;
+            text-decoration: none;
+          }
         }
       }
     }
