--- a/src/pages/MovieDetail/index.module.scss
+++ b/src/pages/MovieDetail/index.module.scss
@@ -62,7 +62,7 @@
         color: #fff;
         background-color: transparent;
         border-radius: 4px;
-        border: 1px solid #706f72;
+        border: 1px solid #ddd;
         height: 36px;
         width: 100px;
         min-width: 36px;
@@ -216,6 +216,11 @@
     .detailContent {
       font-size: 15px;
       color: #444;
+    }
+
+    .viewBtn {
+      width: 100%;
+      text-align: center;
     }
   }
   .movieInfo {
