--- a/src/pages/SignUp/SignUp.module.scss
+++ b/src/pages/SignUp/SignUp.module.scss
@@ -19,6 +19,7 @@
     .tabTitle {
       ul {
         display: flex;
+
         li {
           padding-right: 50px;
           font-size: 14px;
@@ -27,13 +28,8 @@
           &:nth-child(4) {
             padding-right: 0px;
           }
-          .noneStyle {
-            color: #444;
-            text-decoration: none;
-          }
-          .titleStyle {
+          &:active {
             color: #036635;
-            text-decoration: none;
           }
         }
       }
