[ADD:로그인,휴대폰인증
* MOD: tab수정

* MOD: modal수정

* ADD : pull이전 commit

* ADD : login연결

* ADD : signup

* ADD : signup레이아웃

* ADD : 휴대폰인증완료

* ADD : consent

* MOD : consent수정

--- a/src/pages/SignUp/SignUp.module.scss
+++ b/src/pages/SignUp/SignUp.module.scss
@@ -1,5 +1,5 @@
 .container {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -19,6 +19,7 @@
     .tabTitle {
       ul {
         display: flex;
+
         li {
           padding-right: 50px;
           font-size: 14px;
@@ -26,6 +27,9 @@
           border-bottom: 1px solid #d1d5dd;
           &:nth-child(4) {
             padding-right: 0px;
+          }
+          &:active {
+            color: #036635;
           }
         }
       }
