--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -90,15 +90,8 @@
     background-color: #f8f8fa;
     .locationBox {
       width: 1100px;
+      height: 24px;
       margin: 0 auto;
-      display: flex;
-      justify-content: flex-start;
-      .tabLocation {
-        padding-right: 10px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
     }
   }
   .subNav {
