--- a/src/pages/MovieDetail/index.module.scss
+++ b/src/pages/MovieDetail/index.module.scss
@@ -88,6 +88,8 @@
           align-items: center;
           .toolTip {
             position: relative;
+            height: 14px;
+            padding-left: 3px;
             &:hover {
               cursor: pointer;
               .toolTipCon {
@@ -140,6 +142,7 @@
             font-weight: 400;
             color: #fff;
             line-height: 32px;
+            margin-left: 5px;
             .scorePoint {
               color: #006633;
             }
@@ -150,40 +153,28 @@
           }
         }
       }
-
-      // .rate {
-      //   padding-left: 35px;
-      //   &:first-child {
-      //     padding-left: 0;
-      //   }
-      // }
-      // .audience {
-      //   .unit {
-      //     //공통
-      //   }
-      // }
     }
 
-    .poster {
-      overflow: hidden;
-      display: block;
-      position: absolute;
-      right: 0;
-      top: 45px;
-      width: 260px;
-      height: 374px;
-      .posterWrap {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        img {
-          display: block;
-          width: 100%;
-          height: 100%;
-          border-radius: 10px;
-        }
-      }
-    }
+    // .poster {
+    //   overflow: hidden;
+    //   display: block;
+    //   position: absolute;
+    //   right: 0;
+    //   top: 45px;
+    //   width: 260px;
+    //   height: 374px;
+    //   .posterWrap {
+    //     position: relative;
+    //     width: 100%;
+    //     height: 100%;
+    //     img {
+    //       display: block;
+    //       width: 100%;
+    //       height: 100%;
+    //       border-radius: 10px;
+    //     }
+    //   }
+    // }
     .ticketingBtn {
       display: flex;
       align-items: center;
@@ -212,6 +203,7 @@
       font-size: 30px;
       color: #222;
       line-height: 70px;
+      margin-top: 30px;
     }
     .detailContent {
       font-size: 15px;
