ADD : checkbox-start

--- a/src/pages/Find/Find.module.scss
+++ b/src/pages/Find/Find.module.scss
@@ -5,6 +5,7 @@
   width: 100%;
   min-height: 100%;
   background-color: #f8f8fa;
+  z-index: 999999;
   .container {
     width: 710px;
     min-height: 100%;
