--- a/src/pages/SignUp/SignUp.module.scss
+++ b/src/pages/SignUp/SignUp.module.scss
@@ -4,6 +4,7 @@
   left: 0;
   width: 100%;
   background-color: #f8f8fa;
+  z-index: 999999;
   .contentsBox {
     width: 710px;
     margin: 0 auto;
