--- a/src/components/Header/CategoryR.module.scss
+++ b/src/components/Header/CategoryR.module.scss
@@ -35,9 +35,9 @@
       width: 300px;
       height: 80px;
       position: absolute;
-      top: 0;
+      top: 30px;
       // right: 100px;
-      padding-top: 70px;
+      padding-top: 40px;
       display: none;
       .subMenuBoxR {
         text-align: start;
