--- a/src/components/Header/Nav.module.scss
+++ b/src/components/Header/Nav.module.scss
@@ -49,6 +49,9 @@
         }
         .navLogin {
           color: #222;
+          .mouseStyle {
+            cursor: pointer;
+          }
         }
         .mainNavLogin {
           color: #fff;
@@ -66,6 +69,8 @@
           display: flex;
           .iconSize {
             margin-left: 20px;
+            text-decoration: none;
+            color: #444;
           }
         }
       }
