--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -59,6 +59,7 @@
           color: #777;
         }
         .success {
+          cursor: pointer;
           width: 100%;
           line-height: 46px;
           border: none;
