[MOD] Header 전체 수정
* MOD: tab수정

* MOD: modal수정

* ADD : pull이전 commit

* ADD : login연결

* ADD : signup

* ADD : signup레이아웃

* ADD : 휴대폰인증완료

* ADD : consent

* MOD : consent수정

* MOD : Theater

* MOD : location view

* MOD : tab&subnav 수정

* MOD : tab&subnav 수정

* ADD : checkbox-start

* MOD : tab&subnav drop-down수정

* ADD : merge

* ADD : merge

* ADD : merge

--- a/src/pages/SignUp/Complete.module.scss
+++ b/src/pages/SignUp/Complete.module.scss
@@ -12,19 +12,16 @@
   }
   p {
     color: #444;
-    margin-bottom: 30px;
+    margin-bottom: 60px;
   }
   button {
+    cursor: pointer;
     width: 200px;
     height: 40px;
     font-size: 1.1em;
-    background-color: #036635;
-    opacity: 0.8;
     color: #fff;
     border: 0;
     border-radius: 10px;
-    &:hover {
-      opacity: 1;
-    }
+    background-color: #036635;
   }
 }
