--- a/src/components/Header/SubNav.module.scss
+++ b/src/components/Header/SubNav.module.scss
@@ -1,5 +1,6 @@
 .subNavContainer {
   width: 1100px;
+  // height: 800px;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
@@ -31,9 +32,12 @@
       width: 100%;
       margin: 0 auto;
       text-align: center;
-      p {
+      padding-top: 10px;
+      .linkText {
+        line-height: 30px;
         padding-top: 12px;
         color: #aaa;
+        text-decoration: none;
       }
     }
   }
