--- a/src/pages/Find/Find.module.scss
+++ b/src/pages/Find/Find.module.scss
@@ -97,6 +97,18 @@
         font-size: 20px;
         color: #777;
         border: 0;
+        font-size: 1.1em;
+        border-radius: 10px;
+      }
+      .activeFindBtn {
+        width: 200px;
+        line-height: 46px;
+        font-size: 20px;
+        background-color: #036635;
+        color: #fff;
+        border: 0;
+        font-size: 1.1em;
+        border-radius: 10px;
       }
     }
   }
