ADD : checkbox-end

--- a/src/pages/SignUp/Info.module.scss
+++ b/src/pages/SignUp/Info.module.scss
@@ -36,6 +36,13 @@
             padding-left: 10px;
           }
         }
+        .validationMsg {
+          color: red;
+          font-size: 0.9em;
+          text-align: start;
+          padding-left: 10px;
+          padding-top: 6px;
+        }
         .checkBtn {
           width: 80px;
           height: 36px;
