--- a/src/pages/SignUp/Consent.module.scss
+++ b/src/pages/SignUp/Consent.module.scss
@@ -4,6 +4,7 @@
   .content {
     padding-top: 40px;
     text-align: start;
+    margin-bottom: 60px;
     .title {
       font-size: 1.333em;
       text-align: start;
@@ -16,12 +17,16 @@
       border-bottom: 1px solid #f2f2f2;
       margin-bottom: 20px;
       font-size: 1.1em;
-      span {
+      .contentTitle {
         margin-bottom: 10px;
-        line-height: 50px;
+        line-height: 80px;
+        padding-left: 10px;
       }
     }
     div > .consentBox {
+      .boxTitle {
+        padding-left: 10px;
+      }
       .contentBox {
         position: relative;
         overflow: scroll;
@@ -43,5 +48,24 @@
         }
       }
     }
+  }
+  button {
+    width: 200px;
+    line-height: 46px;
+    font-size: 20px;
+    color: #777;
+    border: 0;
+    font-size: 1.1em;
+    border-radius: 10px;
+  }
+  .nextBtn {
+    width: 200px;
+    line-height: 46px;
+    font-size: 20px;
+    background-color: #036635;
+    color: #fff;
+    border: 0;
+    font-size: 1.1em;
+    border-radius: 10px;
   }
 }
