--- a/src/pages/SignUp/Consent.module.scss
+++ b/src/pages/SignUp/Consent.module.scss
@@ -1,5 +1,7 @@
 .authContainer {
-  width: 100%;
+  width: 550px;
+  margin: 0 auto;
+  padding-right: 50px;
   min-height: 100%;
   .content {
     padding-top: 40px;
