MOD : Header 최종

--- a/src/components/Header/Nav.module.scss
+++ b/src/components/Header/Nav.module.scss
@@ -72,6 +72,11 @@
             text-decoration: none;
             color: #444;
           }
+          .mainIconSize {
+            margin-left: 20px;
+            text-decoration: none;
+            color: #fff;
+          }
         }
       }
     }
