--- a/src/components/Header/CategoryL.module.scss
+++ b/src/components/Header/CategoryL.module.scss
@@ -86,11 +86,9 @@
         width: 300px;
         height: 80px;
         position: absolute;
-        top: 0;
+        top: 25px;
         left: 0;
-        padding-top: 70px;
-        // padding-left: -80px;
-        // background-color: aquamarine;
+        padding-top: 45px;
         display: none;
         .subMenuBox {
           text-align: start;
