--- a/src/components/Header/CategoryR.module.scss
+++ b/src/components/Header/CategoryR.module.scss
@@ -36,7 +36,6 @@
       height: 80px;
       position: absolute;
       top: 25px;
-      // right: 100px;
       padding-top: 45px;
       display: none;
       .subMenuBoxR {
@@ -88,9 +87,8 @@
       width: 300px;
       height: 80px;
       position: absolute;
-      top: 0;
-      // right: 100px;
-      padding-top: 70px;
+      top: 25px;
+      padding-top: 45px;
       display: none;
       .subMenuBoxR {
         text-align: start;
